alignment issues

--- a/src/style/flatpickr_base.styl
+++ b/src/style/flatpickr_base.styl
@@ -239,13 +239,12 @@ $bezier = cubic-bezier(0, 1, 0.5, 1)
 
 .flatpickr-current-month
     font-size 135%
-    line-height 1.35
     font-weight 300
     color inherit
     position absolute
     width: 75%;
     left: 12.5%;
-    top: 3px;
+    top: 4px;
     display inline-block
     text-align center
 
